[package]
name = "mon"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.137", features = ["derive"] }
reqwest = "*"
serde_json = "*"
tokio = {version = "*", features = ["rt-multi-thread", "macros"]}
colored = "*"
titlecase = "*"
rand = "*"